--- a/src/css/team.css
+++ b/src/css/team.css
@@ -1,4 +1,107 @@
+.team {
+    padding-bottom: 30px;
+}
+
 .team__header {
     background-image: url("../images/team-background.jpg");
     background-position: center 40%;
+    background-position: center;
+    background-attachment: fixed;
+    margin: 0;
+}
+
+.team-list {
+    padding: 40px 20px;
+}
+
+.team-item {
+    margin: 40px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.team-item__name {
+    font-size: 18px;
+    text-align: center;
+}
+
+.team-item__info {
+    font-size: 14px;
+    text-align: justify;
+}
+
+.team-item__img-wrapper{
+    width: 120px;
+    margin: 20px 0;
+}
+
+.team-item__img {
+    position: relative;
+}
+
+.team-item__img::after{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(1, 135, 145, 0.5);
+    background: linear-gradient(135deg, rgba(0, 198, 212, 0.5), rgba(1, 135, 145, 0.5));
+}
+
+@media (min-width: 600px) {
+    .team-item__name {
+        font-size: 22px;
+    }
+
+    .team-item__info {
+        font-size: 18px;
+    }
+}
+
+@media (min-width: 768px){
+    .team-list {
+        padding: 50px 40px;
+    }
+
+    .team-item {
+        margin: 50px 0;
+    }
+
+    .team-item__img-wrapper{
+        width: 160px;
+        margin: 30px 0;
+    }
+}
+
+@media(min-width: 1024px) {
+    .team-list {
+        padding: 50px 80px;
+    }
+    .team-item {
+        margin: 60px 0;
+        display: grid;
+        grid-template-columns: 250px 1fr;
+        grid-template-rows: 50px 1fr;
+        grid-template-areas: ". name" "picture info";
+        align-items: start;
+    }
+
+    .team-item__name {
+        grid-area: name;
+        text-align: left;
+    }
+
+    .team-item__img-wrapper {
+        grid-area: picture;
+        width: 200px;
+        margin: 0;
+    }
+
+    .team-item__info {
+        grid-area: info;
+    }
 }
