--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -21,7 +21,7 @@
     position: relative;
     display: flex;
     justify-content: space-between;
-    padding: 20px;
+    padding: 14px 20px;
     background-color: transparent;
     z-index: 999;
 }
@@ -35,7 +35,7 @@
 }
 
 .logo__img {
-    height: 40px;
+    height: 60px;
 }
 
 .menu__hamburger {
@@ -244,8 +244,12 @@
          display: flex;
          justify-content: center;
          align-items: center;
-         height: 80px;
+         height: 100px;
      }
+
+     .logo__img {
+        height: 72px;
+    }
 
      .select-language {
         position: relative;
